--- a/intex.html
+++ b/intex.html
@@ -8,6 +8,7 @@
 <body>
     <form action="https://github.com/RafaelMachado914" method="post">
         <Fieldset>
+            <legend><strong>FORMULARIO</strong></legend>
             <Fieldset>
         <label for="nome"><strong> Nome </strong></label>
         <input id="nome" name="nome" type="text" placeholder=" Digite seu nome completo "/>
@@ -68,9 +69,18 @@
             <option value="SC">SC</option>
             <option value="SP">SP</option>
             <option value="RJ">RJ</option>
-            <option value="BH">BH</option>
+            <option value="BA">BA</option>
+            <option value="RS">RS</option>
+            <option value="AC">AC</option>
+            <option value="PR">PR</option>
+            <option value="PE">PE</option>
           </select>
-
+          <br>
+          <br>
+          <label for="mensagem"><strong>mensagem</strong></label>
+          <textarea cols="30" rows="15"></textarea> 
+<br>
+<input type="submit" value="Enviar" />
         
 
 
